packages/styles/toast.css
.Toast {
  top: var(--top-bar-height);
  position: var(--toast-position, fixed);
  right: 0;
  left: 0;
  color: #0b0e11;
  font-size: var(--text-size-small);
  z-index: var(--z-index-toast);
  align-items: center;
  box-sizing: border-box;
  display: flex;
  padding: var(--space-smallest) var(--space-small);
}

.Toast.Toast--non-dismissible {
  position: static;
  margin-bottom: var(--space-small);
}

.TopBar--thin .Toast {
  top: var(--top-bar-height-thin);
}

.Toast.Toast--success {
  background-color: var(--success);
}

.Toast.Toast--warning {
  background-color: var(--warning);
}

.Toast.Toast--error {
  background-color: var(--error-alt);
  z-index: var(--z-index-toast-action-needed);
}

.Toast.Toast--info {
  background-color: var(--info);
}

.Toast__dismiss {
  background: transparent;
  border: 0;
  height: calc(var(--text-size-small) + 9px);
  color: currentColor;
}

.Toast__dismiss:focus {
  outline: 2px solid;
}

.Toast__message {
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

.Toast__message .Toast__message-content {
  border-top: 4px solid transparent;
  border-bottom: 4px solid transparent;
}

.Toast__message .Icon {
  margin-right: var(--space-smallest);
}

.Toast__message .fa {
  margin-right: 3px;
}

.Toast__message .Link,
.Toast__message button.Link {
  color: var(--accent-dark);
  font-size: var(--text-size-small);
  font-weight: var(--font-weight-light);
  text-decoration: underline;
}

.Toast__message .Link:focus {
  outline: 2px solid;
  outline-offset: var(--space-quarter);
}

.Toast__message button.Link:hover,
.Notice a.Link:hover {
  color: var(--accent-medium);
}

.Toast:focus {
  outline: 0;
}

.Toast:focus .Toast__message > .Toast__message-content {
  border-bottom-color: var(--accent-dark);
}

